# batch-validator

./: .clawhook  .env.example  .gitignore  QUICKSTART.md  README.md  SKILL.md  VISION_API_SETUP.md  WORKFLOW.md  batch-validator-summary.md  pyproject.toml
batch-validator/: __init__.py
scripts/: excel_utils.py  extract_all_images.py  extract_all_slide_images.py  extract_content.py  extract_ppt_text.py  extract_screenshot_stats.py  extract_slides_smart.py  fetch_stats_smart.py  fetch_web_stats.py  full_auto_validate.py  parse_ppt_data.py  query_info.py  quick_test.sh  validate.py  validate_excel_ppt.py  vision_api.py
test_slides/: slides_images_map.json
